crates/jarl-core/src/lints/base/equals_nan/snapshots/jarl_core__lints__base__equals_nan__tests__no_fix_with_comments.snap
---
source: crates/jarl-core/src/lints/base/equals_nan/mod.rs
expression: "get_fixed_text(vec![\"# leading comment\\nx == NaN\", \"x # comment\\n== NaN\",\n\"x == NaN # trailing comment\",], \"equals_nan\", None)"
---
OLD:
====
# leading comment
x == NaN
NEW:
====
# leading comment
is.nan(x)

OLD:
====
x # comment
== NaN
NEW:
====
x # comment
== NaN

OLD:
====
x == NaN # trailing comment
NEW:
====
is.nan(x) # trailing comment
